<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".SuggestActivity">-->

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    tools:context=".SuggestActivity">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/textSex"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radGrpGender"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7">

                <RadioButton
                    android:id="@+id/rdbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radbtn_male"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rdbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radbtn_female"
                    android:textSize="20sp" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.5"
                android:text="@string/textAge"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radGrpAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <RadioButton
                    android:id="@+id/radBtn01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radbtn_male_age1"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radBtn02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radbtn_male_age2"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radBtn03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radbtn_male_age3"
                    android:textSize="20sp" />
            </RadioGroup>
        </TableRow>
        <Button
            android:id="@+id/btnDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/suggestion" />
        <TextView
            android:id="@+id/txtResult"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableLayout>